# WatchCrab

./: Cargo.toml  LICENSE  README.md
docs/: usage_examples.md
src/: lib.rs  main.rs  util.rs  watch.rs
