[package]
name = "watchcrab"
version = "0.3.0"
edition = "2021"
description = """
WatchCrab is a Rust-based command-line tool for monitoring directories, triggering custom actions on file system events like creation, modification, or deletion—ideal for automating tasks or logging changes, with seamless integration for advanced workflows.
"""
license = "MIT"
homepage = "https://github.com/IsWladi/WatchCrab"
repository = "https://github.com/IsWladi/WatchCrab.git"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
notify = "6.1.1"
