[package]
name = "watchcrab"
version = "1.0.0"
edition = "2021"
description = """
WatchCrab is a fast, secure, and easy-to-use Rust-based tool to monitor filesystem events across platforms. Effortlessly automate tasks and log changes.
"""
license = "MIT"
homepage = "https://github.com/IsWladi/WatchCrab"
repository = "https://github.com/IsWladi/WatchCrab.git"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
notify = "6.1.1"
threadpool = "1.8.1"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.58.0", features = ["Win32_System_Console", "Win32_System_Threading"]}

